--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Guyard Application</title>
+    <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/druk-trial" rel="stylesheet">
     <style>
         @import url('https://fonts.cdnfonts.com/css/druk-trial');
 </style>
-
-    <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
